@@ -1,5 +1,7 @@
 package com.mduczmal.therapy.ad.image;
 
+import com.mduczmal.therapy.therapist.Therapist;
+import com.mduczmal.therapy.user.UserService;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Service;
@@ -9,11 +11,16 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.UUID;
 
 @Service
 public class FilesystemStorageService implements ImageStorageService, CommandLineRunner {
     private String images;
+    private final ImageRepository imageRepository;
 
+    public FilesystemStorageService(ImageRepository imageRepository) {
+        this.imageRepository = imageRepository;
+    }
     @Override
     public void init() {
         String dir = System.getenv( "FILES");
@@ -34,9 +41,12 @@ public class FilesystemStorageService implements ImageStorageService, CommandLin
         try {
             System.out.println("Processing");
             byte[] bytes = file.getBytes();
-            Path path = Paths.get(images + "/" + file.getOriginalFilename());
+            Image image = new Image();
+            Path path = Path.of(images + "/" + image.getFilename());
             Files.write(path, bytes);
             System.out.println(path + " written");
+            imageRepository.save(image);
+            System.out.println(image.getFilename() + " saved");
         } catch (IOException e) {
             System.out.println("Failed");
             e.printStackTrace();
